--- a/package.json
+++ b/package.json
@@ -2,6 +2,30 @@
   "name": "@easternmotors/eslint-config-ts",
   "version": "1.1.0",
   "description": "Custom ESLint/Prettier/Stylelint config for Typescript users",
+  "keywords": [
+    "check",
+    "checker",
+    "eslint",
+    "eslint-plugin",
+    "javascript",
+    "lint",
+    "linter",
+    "plugin",
+    "prettier",
+    "quality",
+    "react",
+    "simple",
+    "style",
+    "styleguide",
+    "stylelint",
+    "typescript",
+    "verify",
+    "webpack"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/easternmotors/eslint-config-ts.git"
+  },
   "license": "MIT",
   "author": "John Remsberg",
   "main": "index.js",
@@ -16,30 +40,30 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
-    "eslint": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "eslint": "^7.2.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-plugin-cumul8": "^1.4.56",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.1",
     "eslint-plugin-prefer-arrow": "^1.2.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "prettier": "^2.0.5",
-    "stylelint": "^13.5.0",
+    "stylelint": "^13.6.0",
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-no-unused-selectors": "^1.0.28",
-    "stylelint-order": "^4.0.0",
-    "typescript": "^3.8.3",
+    "stylelint-order": "^4.1.0",
+    "typescript": "^3.9.5",
     "webpack": "^4.43.0"
   },
   "peerDependencies": {
-    "eslint": "^7.1.0",
+    "eslint": "^7.2.0",
     "prettier": "^2.0.5",
-    "stylelint": "^13.5.0"
+    "stylelint": "^13.6.0"
   }
 }
