--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.4.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-import-resolver-webpack": "^0.12.2",
     "eslint-plugin-cumul8": "^1.4.56",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prefer-arrow": "^1.2.1",
@@ -58,12 +56,12 @@
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-no-unused-selectors": "^1.0.28",
     "stylelint-order": "^4.1.0",
-    "typescript": "^3.9.6",
-    "webpack": "^4.43.0"
+    "typescript": "^3.9.6"
   },
   "peerDependencies": {
-    "eslint": "^7.3.1",
+    "eslint": "^7.4.0",
     "prettier": "^2.0.5",
-    "stylelint": "^13.6.1"
+    "stylelint": "^13.6.1",
+    "typescript": "^3.9.6"
   }
 }
