--- a/package.json
+++ b/package.json
@@ -58,12 +58,14 @@
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-no-unused-selectors": "^1.0.28",
     "stylelint-order": "^4.1.0",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0"
   },
   "peerDependencies": {
     "eslint": "^7.4.0",
     "prettier": "^2.0.5",
     "stylelint": "^13.6.1",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0"
   }
 }
